--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <button id="toggleDetectingEl" onclick="toggleDetecting()">
         Start Detecting
       </button>
+      <button id="flip-button">flip</button>
     </p>
     <script src="index.js" defer></script>
   </body>
